# FastSpeech2_lightning

./: .coveragerc  LICENSE  pyproject.toml  readme.md  requirements.dev.txt  setup.cfg  setup.py
.github/workflows/: test.yml
fs2/: __main__.py  alignment.py  attention.py  attention_loss.py  blocks.py  cli  cli.py  dataset.py  layers.py  loss.py  model.py  noam.py  prediction_writing_callback.py  run_tests.py  sdp.py  synthesis_outputs.py  synthesize_output_formats.py  synthesize_text_dataset.py  synthesizer.py  transforms.py  type_definitions.py  type_definitions_heavy.py  utils.py  variance_adaptor.py
fs2/attn/: alignment.py  attention.py  attention_loss.py
fs2/cli/: audit.py  benchmark.py  check_data.py  check_data_heavy.py  cli.py  preprocess.py  synthesize.py  train.py
fs2/config/: __init__.py  base.yaml  lj.yaml
fs2/gst/: attn.py  model.py
fs2/tests/: dummy_vocoder.py  test_chunking.py  test_cli.py  test_loading.py  test_lookuptable.py  test_writing_callbacks.py
fs2/tests/data/: filelist.psv  filelist.txt
fs2/utils/: __init__.py  heavy.py
